--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="elements.html">Events</a></li>
 					<li><a href="generic.html">About Us</a></li>
+					<li><a href="login.html">Login</a></li>
 				</ul>
 			</nav>
 
