--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <head>
   <title>Firebase Login</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/assets/css/login.css" />
 </head>
 <body>
 
@@ -37,7 +37,7 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-  <script src="index.js"></script>
+  <script src="/assets/js/login.js"></script>
 
 </body>
 </html>
